--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,15 +15,15 @@
     </style>
 
     <style name="Texto_Titulos">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="textInputStyle">bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Texto_normal">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/purple_700</item>
-        <item name="textInputStyle">italic</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
 </resources>
