--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,16 +14,22 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Texto_Titulos">
-        <item name="android:textSize">20dp</item>
+    <style name="Texto_titulos">
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="textInputStyle">bold</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Texto_normal">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/purple_700</item>
-        <item name="textInputStyle">italic</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="Texto_subtitulo">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/purple_700</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
